; ModuleID = '/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_ignore_transmits.c'
source_filename = "/home/carl/AnghaBench/masscan/src/extr_rawsock.c_rawsock_ignore_transmits.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i64, i32)*, i32 (i64, i8*)* }
%struct.Adapter = type { i64, i64 }

@PCAP = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@PCAP_D_IN = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [26 x i8] c"if: pcap_setdirection(IN)\00", align 1
@.str.1 = private unnamed_addr constant [32 x i8] c"if:%s: not receiving transmits\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rawsock_ignore_transmits(%struct.Adapter* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.Adapter*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.Adapter* %0, %struct.Adapter** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = call i32 @UNUSEDPARM(i8* %8)
  %10 = load %struct.Adapter*, %struct.Adapter** %4, align 8
  %11 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  br label %39

15:                                               ; preds = %3
  %16 = load %struct.Adapter*, %struct.Adapter** %4, align 8
  %17 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %39

20:                                               ; preds = %15
  %21 = load i32 (i64, i32)*, i32 (i64, i32)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @PCAP, i32 0, i32 0), align 8
  %22 = load %struct.Adapter*, %struct.Adapter** %4, align 8
  %23 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i32, i32* @PCAP_D_IN, align 4
  %26 = call i32 %21(i64 %24, i32 %25)
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %7, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %20
  %30 = load i32 (i64, i8*)*, i32 (i64, i8*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @PCAP, i32 0, i32 1), align 8
  %31 = load %struct.Adapter*, %struct.Adapter** %4, align 8
  %32 = getelementptr inbounds %struct.Adapter, %struct.Adapter* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = call i32 %30(i64 %33, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0))
  br label %38

35:                                               ; preds = %20
  %36 = load i8*, i8** %6, align 8
  %37 = call i32 @LOG(i32 2, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.1, i64 0, i64 0), i8* %36)
  br label %38

38:                                               ; preds = %35, %29
  br label %39

39:                                               ; preds = %14, %38, %15
  ret void
}

declare dso_local i32 @UNUSEDPARM(i8*) #1

declare dso_local i32 @LOG(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
